Bug 502719 - 5.3 nightly: Crash when launching app
Summary: 5.3 nightly: Crash when launching app
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Android Android 14.x
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-04-12 17:41 UTC by art1
Modified: 2025-04-29 17:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description art1 2025-04-12 17:41:18 UTC
SUMMARY
Crash when launching the app (the latest nightly at the time of this post). Happens on a clean install.

STEPS TO REPRODUCE
Launch the app after installing

OBSERVED RESULT
Crash

EXPECTED RESULT
No crash

SOFTWARE/OS VERSIONS
Android 15
Arm64 APK
5.3 nightly
git 7b77d225
Comment 1 Freya Lupen 2025-04-28 19:36:58 UTC
Confirming that the arm64 Android 5.3.0-prealpha-a05ebc35 nightly crashes on startup.
Error message:
> qt.qpa.plugin: Could not find the Qt platform plugin "xcb" in ""
> This application failed to start because no Qt platform plugin could be initialized. Reinstalling the application may fix this problem.
> Available platform plugins are: android.
Comment 2 Freya Lupen 2025-04-29 17:11:49 UTC
Git commit 1a8ef4c757e2bd8feecd6c16e2d43c5e3a83fd6c by Freya Lupen.
Committed on 29/04/2025 at 17:09.
Pushed by freyalupen into branch 'master'.

Fix loading Qt platform plugin on Android

Revert to checking HAVE_X11 before setting the platform plugin to xcb,
checking Q_OS_LINUX includes Android which has its own platform plugin.

M  +1    -1    krita/main.cc

https://invent.kde.org/graphics/krita/-/commit/1a8ef4c757e2bd8feecd6c16e2d43c5e3a83fd6c