Fix loading Qt platform plugin on Android

Revert to checking HAVE_X11 before setting the platform plugin to xcb,
checking Q_OS_LINUX includes Android which has its own platform plugin.

BUG:502719